# fastapi-rag-backend-task

./: .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  test_search.py
app/: main.py
app/api/: deps.py
app/api/v1/: chat.py  ingestion.py
app/core/: config.py  logger.py
app/db/: session.py  vector_store.py
app/models/: __init__.py  booking.py  metadata.py
app/schemas/: chat.py  document.py
app/services/: chunker.py  document_parser.py  embeddings.py  llm_provider.py  memory.py  rag.py
config/: embeddings.yaml  llm.yaml
