[project]
name = "plammindaiintern"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic-settings",
    "python-multipart",
    "qdrant-client",
    "redis",
    "langchain-core",
    "langchain-huggingface",
    "sentence-transformers",  # Required for local HF embeddings
]
