[project]
name = "plammindaiintern"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic-settings",
    "python-multipart",
    "qdrant-client",
    "redis",
    "langchain-core",
    "langchain-huggingface",
    "sentence-transformers",
    "pymupdf>=1.27.2.2",
    "langchain-text-splitters>=1.1.1",
    "tiktoken>=0.12.0",
    "langchain-openai>=1.1.13",
    "langchain-google-genai>=4.2.2",
]
